--- a/bot/domain.yml
+++ b/bot/domain.yml
@@ -3,6 +3,8 @@ session_config:
   carry_over_slots_to_new_session: true
 
 slots:
+  en_world_region:
+    type: text
   total_nr_tries:
     type: float
     initial_value: 0.0
@@ -65,6 +67,7 @@ entities:
   - bot_language_code
   - preferred_lang
   - en_country_code 
+  - en_world_region
 
 actions:
   - action_get_date
@@ -163,7 +166,7 @@ actions:
   - utter_en_prevention_distance
   - utter_en_prevention_general
   - utter_en_prevention_home
-  - utter_en_prevention_information
+  - utter_en_prevention_informed
   - utter_en_prevention_measures
   - utter_en_prevention_medicine
   - utter_en_prevention_respiratory_hygiene
@@ -219,6 +222,7 @@ actions:
   - utter_en_command_change_bot
 
 intents:
+  - start_dialogue
   - start
   - en_country
   - en_bot_appearance
@@ -1466,7 +1470,7 @@ responses:
               - label: World Situation
                 value: World Situation
 
-  utter_en_prevention_information:
+  utter_en_prevention_informed:
     - custom:
         answers:
           - type: ssml
