--- a/bot/config.yml
+++ b/bot/config.yml
@@ -1,21 +1,39 @@
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
 language: "en"  # your two-letter language code
+
 pipeline:
-  # - name: language_detection.lang_detect_component.CustomLangDetect
-  - name: WhitespaceTokenizer
-  - name: RegexFeaturizer
-  - name: LexicalSyntacticFeaturizer
-  - name: CountVectorsFeaturizer
-  - name: CountVectorsFeaturizer
-    analyzer: "char_wb"
-    min_ngram: 1
-    max_ngram: 4
-  - name: DIETClassifier
-    epochs: 100
-  - name: EntitySynonymMapper
-  - name: ResponseSelector
-    epochs: 100
+- name: spacy_nlp.spacy_nlp_neuralcoref.SpacyNLPNeuralCoref
+  model: "en_neuralcoref"
+- name: SpacyTokenizer
+- name: SpacyEntityExtractor
+- name: SpacyFeaturizer
+  pooling: mean
+- name: CountVectorsFeaturizer
+  analyzer: char_wb
+  min_ngram: 1
+  max_ngram: 4
+- name: DIETClassifier
+  epochs: 1
+- name: EntitySynonymMapper
+- name: ResponseSelector
+  epochs: 100
+
+# pipeline:
+#   # - name: language_detection.lang_detect_component.CustomLangDetect
+#   - name: WhitespaceTokenizer
+#   - name: RegexFeaturizer
+#   - name: LexicalSyntacticFeaturizer
+#   - name: CountVectorsFeaturizer
+#   - name: CountVectorsFeaturizer
+#     analyzer: "char_wb"
+#     min_ngram: 1
+#     max_ngram: 4
+#   - name: DIETClassifier
+#     epochs: 100
+#   - name: EntitySynonymMapper
+#   - name: ResponseSelector
+#     epochs: 100
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
