script to extract and import responses of the domain
script to extract and import responses of the domain file to/from csv

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@ bot/.vscode/
 bot/models/
 scripts/javascript/node_modules/
 bot/story_graph.dot
+scripts/python/domain_answers.csv
+scripts/python/domain_answers_updated.csv
