--- a/.github/workflows/model_ci.yml
+++ b/.github/workflows/model_ci.yml
@@ -2,8 +2,35 @@ name: ci-tests
 on: [push]
 
 jobs:
-  build-model:
-    name: Build, test, and upload model
+
+  unit-tests:
+    name: Run unit tests
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r model-ci-requirements.txt
+
+    - name: Run unit tests 
+      run: |
+        cd bot
+        pytest --doctest-modules --cov=bot --cov-report=html
+
+    - name: Save tests
+      uses: actions/upload-artifact@v2
+      with:
+        name: unit-tests
+        path: bot/htmlcov
+
+  training-testing:
+    name: Train and test bot
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -16,11 +43,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r model-ci-requirements.txt
-
-    - name: Run unit tests 
-      run: |
-        cd bot
-        pytest --doctest-modules --cov=bot --cov-report=html
 
     - name: en - Train model
       run: |
@@ -40,5 +62,4 @@ jobs:
     - name: br - Run Through Test stories
       run: |
         cd bot
-        rasa test --model languages/br/models --nlu languages/br/data --stories languages/br/tests/conversation_tests.md --out languages/br/results
-    
+        rasa test --model languages/br/models --nlu languages/br/data --stories languages/br/tests/conversation_tests.md --out languages/br/results    
