--- a/.github/workflows/model_ci.yml
+++ b/.github/workflows/model_ci.yml
@@ -8,22 +8,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - id: files
+      uses: jitterbit/get-changed-files@v1
+    - name: set_unit_test
+      if: |
+          contains(  steps.files.outputs.all, 'bot/actions'  )
+      run: echo "::set-env name=RUN_UNIT_TESTS::true"
     - name: Set up Python 3.7
+      if: env.RUN_UNIT_TESTS == 'true'
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
     
     - name: Install dependencies
+      if: env.RUN_UNIT_TESTS == 'true'
       run: |
         python -m pip install --upgrade pip
         pip install -r model-ci-requirements.txt
 
     - name: Run unit tests 
+      if: env.RUN_UNIT_TESTS == 'true'
       run: |
         cd bot
         pytest --doctest-modules --cov=bot --cov-report=html
 
     - name: Save tests
+      if: env.RUN_UNIT_TESTS == 'true'
       uses: actions/upload-artifact@v2
       with:
         name: unit-tests
