--- a/.github/workflows/model_ci.yml
+++ b/.github/workflows/model_ci.yml
@@ -126,3 +126,47 @@ jobs:
       with:
         name: br-tests
         path: bot/languages/br/results
+  
+  training-testing-es:
+    name: Train and test es bot
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - id: files
+      uses: jitterbit/get-changed-files@v1
+    - name: set_training
+      if: |
+          contains(  steps.files.outputs.all, 'bot/languages/es/data/'  )
+          || contains( steps.files.outputs.all, 'bot/languages/es/config.yml'  )
+          || contains(  steps.files.outputs.all, 'bot/languages/es/domain.yml'  )
+          || contains(  steps.files.outputs.all, 'bot/languages/es/tests/conversation_tests.md'  )
+      run: echo "RUN_TRAINING=true" >> $GITHUB_ENV
+    - name: Set up Python 3.7
+      if: env.RUN_TRAINING == 'true'
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+    - name: Install dependencies
+      if: env.RUN_TRAINING == 'true'
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r model-ci-requirements.txt
+
+    - name: es - Train model
+      if: env.RUN_TRAINING == 'true'
+      run: |
+        cd bot
+        rasa train --config languages/es/config.yml --domain languages/es/domain.yml --data languages/es/data languages/stories.md --augmentation 0 --out languages/es/models/  
+
+    - name: es - Run Through Test stories
+      if: env.RUN_TRAINING == 'true'
+      run: |
+        cd bot
+        rasa test --model languages/es/models --nlu languages/es/data --stories languages/es/tests/conversation_tests.md --out languages/es/results
+
+    - name: es - Save tests
+      if: env.RUN_TRAINING == 'true'
+      uses: actions/upload-artifact@v2
+      with:
+        name: es-tests
+        path: bot/languages/es/results
